2022-05-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglue.c:
	  Fix bug #3031.

2022-05-02 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Document language override option -x.

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-1981238.c,
	  support/regression/tests/bug-3368.c:
	  Disable some warnings about stuff that is meant to be tested.

2022-04-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/lib/z180/setjmp.s,
	  device/lib/z80/setjmp.s,
	  device/lib/z80n/setjmp.s:
	  Fix an issue triggered by tail-call optimization on calls to longjmp.

2022-04-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/genericnonintrinsicnaddr.c:
	  Use PORT_HOST, just like the other tests, instead of TEST_HOST.

2022-04-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge implicitintrinsicnamedaddressspaces branch.

2022-04-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/genericintrinsicnaddr.c,
	  support/regression/tests/genericnonintrinsicnaddr.c:
	  Test _Generic on pointers into named address spaces.
	* src/SDCCmem.c,
	  src/SDCCast.c:
	  Fix a _Generic implicit intrinsic named address space issue affecting large and huge mcs51 memory model.

2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/Makefile.in,
	  support/regression/cases/Makefile.in,
	  support/regression/gte:
	  Import missing gcc torture execute tests, patch by by Felix Salfelder (felixs).

2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge regtest branch.

2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/cases/Makefile.in:
	  Test cases cleanup, patch by by Felix Salfelder (felixs).
